modified:   .gitignore 	renamed:    main.ui -> Designs/MainWidget_design.ui 	new file:   Designs/PasswordManagerWidget_design.ui 	renamed:    ui_main.py -> Designs/ui_MainWidget_design.py 	new file:   Designs/ui_PasswordManagerWidget_design.py 	new file:   PasswordGenerator.py 	new file:   PasswordManagerDB.db 	modified:   main.py 	new file:   requirements.txt 	new file:   test_sql.py     ---     * Дизайн-файлы закинуты в отдельную папку     * Создана форма менеджера пароля, содержащая таблицу     * Создан тестовый файл работы базой данных     * Создан requirements.txt

--- a/Designs/MainWidget_design.ui
+++ b/Designs/MainWidget_design.ui
@@ -14,7 +14,7 @@
    <string>CryptoPass</string>
   </property>
   <property name="windowOpacity">
-   <double>0.750000000000000</double>
+   <double>0.9</double>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frame">
