Реализован менеджер паролей с возожностью отчистки таблицы БД
Changes to be committed:
	modified:   Designs/PasswordManagerWidget_design.ui
	modified:   Designs/ui_PasswordManagerWidget_design.py
	modified:   PasswordManagerDB.db
	modified:   main.py

--- a/Designs/PasswordManagerWidget_design.ui
+++ b/Designs/PasswordManagerWidget_design.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>424</width>
-    <height>468</height>
+    <height>491</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -51,7 +51,7 @@
       <x>10</x>
       <y>390</y>
       <width>401</width>
-      <height>71</height>
+      <height>91</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -87,11 +87,25 @@
       </layout>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>Add</string>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Add</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="text">
+          <string>Clear</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_2"/>
      </item>
     </layout>
    </widget>
