--- a/Designs/MainWidget_design.ui
+++ b/Designs/MainWidget_design.ui
@@ -6,12 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>336</width>
+    <width>321</width>
     <height>279</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>CryptoPass</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../favicon.png</normaloff>../favicon.png</iconset>
   </property>
   <property name="windowOpacity">
    <double>0.900000000000000</double>
@@ -166,9 +170,9 @@
     <widget class="QSpinBox" name="spinBox">
      <property name="geometry">
       <rect>
-       <x>270</x>
+       <x>260</x>
        <y>50</y>
-       <width>41</width>
+       <width>51</width>
        <height>41</height>
       </rect>
      </property>
@@ -205,7 +209,7 @@
      <rect>
       <x>12</x>
       <y>240</y>
-      <width>311</width>
+      <width>301</width>
       <height>28</height>
      </rect>
     </property>
