Changes to be committed: 	modified:   .gitignore 	modified:   Designs/PasswordManagerWidget_design.ui 	modified:   Designs/ui_PasswordManagerWidget_design.py 	new file:   favicon.ico 	modified:   main.py

--- a/Designs/PasswordManagerWidget_design.ui
+++ b/Designs/PasswordManagerWidget_design.ui
@@ -7,11 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>424</width>
-    <height>491</height>
+    <height>529</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Password Manager</string>
+  </property>
+  <property name="windowOpacity">
+   <double>0.900000000000000</double>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTableWidget" name="tableWidget">
@@ -51,7 +54,7 @@
       <x>10</x>
       <y>390</y>
       <width>401</width>
-      <height>91</height>
+      <height>137</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
